<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivImageMovie"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_movie_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/id_judul"
                android:textSize="10pt"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/id_deskripsi"/>

            <Button
                android:id="@+id/btDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/detail"
                android:textSize="11sp"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>