<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImageMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_movie_black_24dp"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_judul"
            android:layout_gravity="center"
            android:textSize="12pt"
            android:textStyle="bold"
            android:paddingBottom="5dp"/>

        <ImageButton
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_favorite_black_24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="7pt"/>

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/rating"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/id_kepopuleran"
                android:textSize="7pt"/>

            <TextView
                android:id="@+id/tvPopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/id_kepopuleran"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/id_tanggal_rilis"
                android:textSize="7pt"/>

            <TextView
                android:id="@+id/tvDateRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/id_tanggal_rilis"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/id_deskripsi"
                android:textSize="7pt"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/id_deskripsi"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>